<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menuprincipal"
    tools:context=".MenuPrincipal">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/applogo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/titMenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="15dp"
        android:padding="20dp"
        android:text="@string/tituloMenuPrincipal"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonLugares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titMenuPrincipal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:text="@string/botonLugares"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botonProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonLugares"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/inputs"
        android:text="@string/botonProductos"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/botonRecetas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonProductos"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="9dp"
        android:text="@string/botonRecetas"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/botonCursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonRecetas"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="9dp"
        android:text="@string/botonCursos"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/botonEventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonCursos"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="9dp"
        android:text="@string/botonEventos"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/PopUpQuienesSomos"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/botonEventos"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/quienessomos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        />



</RelativeLayout>